Collapse all the things! Pre collapse everything in lesson admin view (had to remove activity md rendering for this to work, will continue to evaluate) Collapse each standard framework in lesson plan view Collapse each individual standard description in lesson plan view Add jQuery to ensure summary/details work in all browsers

--- a/static/css/curriculum.css
+++ b/static/css/curriculum.css
@@ -107,6 +107,15 @@ img {
     color: white;
 }
 
+#standards .framework > summary {
+    font-weight: bold;
+}
+
+#standards .framework .standard {
+    margin-left: 30px;
+}
+
+
 /* Alignment classes */
 .center {
     display: block;
